# binocular-ml

./: .gitignore  README.md  binocular_model.keras  classification_train.py  convert_model_tfjs.py  pyproject.toml  requirements.txt  test_binocular.py  webcam_test.py
models/: add l1 l2 reg to 0.01_20240515-103844.keras  binocular_legacy.keras  binocular_ml.keras  binocular_model.h5  binocular_model.keras  decrease_l12_to_.0001_20240515-121803.keras
src/: tfjs_convert.py  train.py
src/testing/: pictures_test.py  webcam_test.py
