[tool.poetry]
name = "binocular-ml"
version = "0.1.0"
description = ""
authors = ["Thibault Walterspieler <twalterspieler@pm.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mtcnn = "^0.1.1"
numpy = "^1.26.4"
opencv-python = "^4.9.0.80"
matplotlib = "^3.8.4"
scipy = "^1.13.0"
pyinquirer = "1.0.3"
glasses-detector = "^1.0.1"
pyqt5 = "^5.15.10"
pyyaml = "^6.0.1"
tensorflow = "^2.16.1"
tensorflow-datasets = "^4.9.4"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
