[tool.poetry]
name = "binocular-ml"
version = "0.1.0"
description = "Deep learning model using TensorFlow and Keras to differentiate between images of people with glasses and without glasses."
authors = ["Thibault Walterspieler <thibs@wearestudio99.fr>"]

[tool.poetry.dependencies]
python = "3.12.3"
mtcnn = "^0.1.1"
numpy = "^1.26.4"
opencv-python = "^4.9.0.80"
matplotlib = "^3.8.4"
scipy = "^1.13.0"
pyinquirer = "1.0.3"
tensorflow = "^2.16.1"
tensorflow-datasets = "^4.9.4"
scikit-learn = "^1.5.0"